test/tests/operators/enumerate/invalid_out.txt
error: expected a field path
 --> tests/operators/enumerate/invalid_out.tql:6:11
  |
6 | enumerate 1
  |           ^ 
  |
